CS323/project/test/test_1/test_xkpDwGrq.out
Error type A at Line 3: unknown lexeme 2
Error type A at Line 3: unknown lexeme 1_right_id_2
Error type A at Line 4: unknown lexeme 3_wrong_id
