CS323/project/test/test_1/test_xkpDwGrq.spl
int woainikanbudao()
{
    int 2, 1_right_id_2;
    float 3_wrong_id;
}